--- a/front/public/index.html
+++ b/front/public/index.html
@@ -15,9 +15,11 @@
     <!--  FONTS  -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Sber HR</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
   </body>
 </html>
